<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFE1DD"
    tools:context=".WelcomePage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="366dp"
        android:layout_height="244dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_with_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="331dp"
        android:layout_height="106dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="casual"
        android:text="@string/vibe_with_your_music_style"
        android:textColor="#FEBA00"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Wsignbtn"
        android:layout_width="205dp"
        android:layout_height="66dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/button_curve_shape"
        android:text="@string/sign_up_here"
        android:textColor="#FE007B"
        app:layout_constraintBottom_toTopOf="@+id/Wlogbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Wlogbtn"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="106dp"
        android:background="@drawable/button_curve_shape"
        android:text="@string/log_in2"
        android:textColor="#FE007B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>